--- a/public/packages/barryvdh/elfinder/css/elfinder.full.css
+++ b/public/packages/barryvdh/elfinder/css/elfinder.full.css
@@ -1,9 +1,9 @@
 /*!
  * elFinder - file manager for web
- * Version 2.1.50 (2019-08-20)
+ * Version 2.1.53 (2020-01-25)
  * http://elfinder.org
  * 
- * Copyright 2009-2019, Studio 42
+ * Copyright 2009-2020, Studio 42
  * Licensed under a 3-clauses BSD license
  */
 
@@ -942,6 +942,40 @@ ul.elfinder-help-integrations a:hover {
 /* for old jQuery UI */
 .ui-front {
     z-index: 100;
+}
+
+/* style reset */
+div.elfinder *,
+div.elfinder :after,
+div.elfinder :before {
+    box-sizing: content-box;
+}
+
+div.elfinder fieldset {
+    display: block;
+    margin-inline-start: 2px;
+    margin-inline-end: 2px;
+    padding-block-start: 0.35em;
+    padding-inline-start: 0.75em;
+    padding-inline-end: 0.75em;
+    padding-block-end: 0.625em;
+    min-inline-size: min-content;
+    border-width: 2px;
+    border-style: groove;
+    border-color: threedface;
+    border-image: initial;
+}
+
+div.elfinder legend {
+    display: block;
+    padding-inline-start: 2px;
+    padding-inline-end: 2px;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    width: auto;
+    margin-bottom: 0;
 }
 
 /* base container */
@@ -2450,7 +2484,7 @@ div.elfinder {
 }
 
 .elfinder .elfinder-cwd table td {
-    padding: 4px 12px;
+    padding: 0 12px;
     white-space: pre;
     overflow: hidden;
     text-align: right;
@@ -2519,6 +2553,12 @@ tr.elfinder-cwd-file td .elfinder-cwd-select {
 
 .elfinder-rtl .elfinder-cwd-view-list.elfinder-has-checkbox .elfinder-cwd-file-wrapper {
     margin-right: 8px;
+}
+
+.elfinder-cwd-view-list .elfinder-cwd-filename {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    display: inline-block;
 }
 
 .elfinder-ltr .elfinder-cwd-view-list .elfinder-cwd-filename {
@@ -2874,7 +2914,6 @@ tr.elfinder-cwd-file td .elfinder-cwd-select {
 /* content */
 .std42-dialog .ui-dialog-content {
     padding: .3em .5em;
-    box-sizing: border-box;
 }
 
 .elfinder .std42-dialog .ui-dialog-content,
@@ -4153,9 +4192,10 @@ button.elfinder-info-button {
 }
 
 /* image in preview */
-.elfinder-quicklook-preview img {
+.elfinder-quicklook-preview > img,
+.elfinder-quicklook-preview > div > canvas {
     display: block;
-    margin: 0 auto;
+    margin: auto;
 }
 
 /* navigation bar on quicklook window bottom */
@@ -4235,6 +4275,26 @@ button.elfinder-info-button {
     display: none;
 }
 
+/* text encoding selector */
+.elfinder-quicklook-encoding {
+    height: 40px;
+}
+.elfinder-quicklook-encoding > select {
+    color: #fff;
+    background: #000;
+    border: 0;
+    font-size: 12px;
+    max-width: 100px;
+    display: inline-block;
+    position: relative;
+    top: 6px;
+    left: 5px;
+}
+.elfinder-navdock .elfinder-quicklook .elfinder-quicklook-encoding {
+    display: none;
+}
+
+
 /* text files preview wrapper */
 .elfinder-quicklook-preview-text-wrapper {
     width: 100%;
@@ -4269,6 +4329,8 @@ pre.elfinder-quicklook-preview-text.prettyprint {
     margin: 0;
     padding: 3px 9px;
     border: none;
+    overflow: visible;
+    background: #fff;
     -o-tab-size: 4;
     -moz-tab-size: 4;
     tab-size: 4;
@@ -4321,6 +4383,13 @@ embed.elfinder-quicklook-preview-audio {
 .elfinder-quicklook-preview-video {
     width: 100%;
     height: 100%;
+}
+
+/* video.js error message */
+.elfinder-quicklook-preview .vjs-error .vjs-error-display .vjs-modal-dialog-content {
+    font-size: 12pt;
+    padding: 0;
+    color: #fff;
 }
 
 /* allow user select */
